[gd_scene load_steps=8 format=3 uid="uid://d3jsqs5frt2j7"]

[ext_resource type="Script" path="res://scripts/draw.gd" id="1_x8jtq"]
[ext_resource type="Texture2D" uid="uid://6w3d46ax438w" path="res://assets/cards/card_back.png" id="2_h7ast"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hq4v5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gmeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l286b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1i5wm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbrui"]

[node name="Draw" type="Node2D"]
script = ExtResource("1_x8jtq")
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(76, 118)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -59.0
offset_right = 38.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_hq4v5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4gmeq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l286b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1i5wm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xbrui")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_h7ast")

[connection signal="button_down" from="Button" to="." method="_on_mouse_down"]
[connection signal="button_up" from="Button" to="." method="_on_mouse_up"]
[connection signal="mouse_entered" from="Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_mouse_exited"]
